--- a/Medkiosk.TelegramBot/appsettings.json
+++ b/Medkiosk.TelegramBot/appsettings.json
@@ -1,7 +1,10 @@
 {
   "Logging": {
+    "PathFormat": "Logs\\log-{Date}.txt",
+    "OutputTemplate": "{Timestamp:o} {ThreadId} [{Level:u3}] {Message} {Properties}{NewLine}{Exception}",
+    "IncludeScopes": true,
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
