--- a/Medkiosk.TelegramBot/Medkiosk.TelegramBot.csproj
+++ b/Medkiosk.TelegramBot/Medkiosk.TelegramBot.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
     <PackageReference Include="Telegram.Bot" Version="16.0.2" />
+    <PackageReference Include="Telegram.Bot.Extensions.Polling" Version="0.2.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -34,6 +35,10 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Messaging\Conversation\SetPassword\" />
   </ItemGroup>
 
 </Project>
