--- a/Medkiosk.TelegramBot.Data/Medkiosk.TelegramBot.Data.csproj
+++ b/Medkiosk.TelegramBot.Data/Medkiosk.TelegramBot.Data.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Medkiosk.TelegramBot.Core\Medkiosk.TelegramBot.Core.csproj" />
+  </ItemGroup>
+
 </Project>
