--- a/Medkiosk.TelegramBot.Data/Medkiosk.TelegramBot.Data.csproj
+++ b/Medkiosk.TelegramBot.Data/Medkiosk.TelegramBot.Data.csproj
@@ -14,6 +14,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.7" />
+    <PackageReference Include="Serilog" Version="2.10.0" />
   </ItemGroup>
 
   <ItemGroup>
